# String-Parser

./: CMakeLists.txt  README.md  base.hpp  optional.hpp  parser.hpp  rule.hpp  token.hpp  unused.hpp
examples/: CMakeLists.txt  basic.cpp  calculator.cpp
examples/compiler/: compiler.cpp  compiler.hpp  global.hpp  instruction.cpp  instruction.hpp  lexer.hpp  main.cpp  main.out  node.cpp  node.hpp  program.cpp  program.hpp  test.eh  testsource.txt  tokenizer.cpp  tokenizer.hpp
include/: base.hpp  context.hpp  parse_result.hpp  parser.hpp
include/rules/: always.hpp  dictionary.hpp  not.hpp  notconsume.hpp  ref.hpp  repeat.hpp  seq.hpp  stringmatch.hpp  unused.hpp
rules/: action.hpp  always.hpp  characterset.hpp  dictionary.hpp  equal.hpp  find.hpp  itpair.hpp  not.hpp  notconsume.hpp  one.hpp  or.hpp  range.hpp  ref.hpp  repeat.hpp  seq.hpp  stringmatch.hpp  unused.hpp
test/: test.cpp
